# airbender-platform

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-title.yml
crates/airbender-build/src/: config.rs  constants.rs  errors.rs  lib.rs  utils.rs
crates/airbender-codec/src/: lib.rs
crates/airbender-core/: Cargo.toml
crates/airbender-core/src/: guest.rs  lib.rs  manifest.rs  wire.rs
crates/airbender-crypto/proptest-regressions/bls12_381/curves/: g1.txt
crates/airbender-crypto/proptest-regressions/bn254/curves/: g1.txt
crates/airbender-crypto/proptest-regressions/secp256k1/: recover.txt
crates/airbender-crypto/proptest-regressions/secp256k1/field/: field_8x32.txt
crates/airbender-crypto/src/: glv_decomposition.rs  lib.rs  raw_delegation_interface.rs
crates/airbender-crypto/src/ark_ff_delegation/: mod.rs
crates/airbender-crypto/src/ark_ff_delegation/biginteger/: mod.rs
crates/airbender-crypto/src/bigint_delegation/: delegation.rs  mod.rs  u256.rs  u512.rs
crates/airbender-crypto/src/blake2s/: delegated_extended.rs  mod.rs  test.rs
crates/airbender-crypto/src/blake2s/test_program/: Cargo.toml  dump_bin.sh
crates/airbender-crypto/src/blake2s/test_program/.cargo/: config.toml
crates/airbender-crypto/src/blake2s/test_program/src/: main.rs
crates/airbender-crypto/src/bls12_381/: consts.rs  eip2537.rs  mod.rs
crates/airbender-crypto/src/bls12_381/curves/: g1.rs  g1_swu_iso.rs  g2.rs  g2_swu_iso.rs  mod.rs  pairing_impl.rs  util.rs
crates/airbender-crypto/src/bls12_381/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
crates/airbender-crypto/src/bn254/curves/: g1.rs  g2.rs  mod.rs  pairing_impl.rs
crates/airbender-crypto/src/bn254/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs
crates/airbender-crypto/src/secp256k1/: context.rs  mod.rs  recover.rs
crates/airbender-crypto/src/secp256k1/field/: field_10x26.rs  field_5x52.rs  field_8x32.rs  field_impl.rs  mod.rs
crates/airbender-crypto/src/secp256k1/points/: affine.rs  jacobian.rs  mod.rs
crates/airbender-crypto/src/secp256k1/scalars/: invert.rs  mod.rs  scalar32.rs  scalar32_delegation.rs  scalar64.rs
crates/airbender-crypto/src/secp256r1/: context.rs  mod.rs  u64_arithmetic.rs  verify.rs
crates/airbender-crypto/src/secp256r1/field/: fe32_delegation.rs  fe64.rs  mod.rs
crates/airbender-crypto/src/secp256r1/points/: affine.rs  jacobian.rs
crates/airbender-crypto/src/secp256r1/scalar/: mod.rs  scalar64.rs  scalar_delegation.rs
crates/airbender-crypto/tests/: secp256k1.rs  secp256r1.rs
crates/airbender-guest/: Cargo.toml
crates/airbender-guest/src/: commit.rs  input.rs  lib.rs
crates/airbender-host/: Cargo.toml
crates/airbender-host/src/: error.rs  inputs.rs  lib.rs  program.rs  proof.rs  receipt.rs  verifier.rs  vk.rs
crates/airbender-host/src/prover/: cpu_prover.rs  dev_prover.rs  gpu_prover.rs  mod.rs
crates/airbender-host/src/runner/: mod.rs  simulator_runner.rs  transpiler_runner.rs
crates/airbender-macros/src/: lib.rs
crates/airbender-rt/: Cargo.toml
crates/airbender-rt/src/: boot.rs  glue.rs  lib.rs  sys.rs
crates/airbender-rt/src/allocator/: bump_allocator.rs  mod.rs  talc_allocator.rs
crates/airbender-sdk/: Cargo.toml
crates/cargo-airbender/: Cargo.toml
crates/cargo-airbender/src/: cli.rs
crates/cargo-airbender/src/commands/: new.rs  prove.rs  run.rs  vk.rs
crates/cargo-airbender/src/commands/new/: args.rs  deps.rs  mod.rs  profiles.rs  template.rs
crates/cargo-airbender/templates/: README.md.template
crates/cargo-airbender/templates/guest/: Cargo.toml.template  rust-toolchain.toml.template
crates/cargo-airbender/templates/guest/.cargo/: config.toml.template
crates/cargo-airbender/templates/guest/src/: main.rs.template
crates/cargo-airbender/templates/host/: Cargo.toml.template  rust-toolchain.toml.template
crates/cargo-airbender/templates/host/src/: main.dev.rs.template  main.gpu.rs.template  main.rs.template
crates/cargo-airbender/templates/snippets/: custom_allocator_module.rs.template  prover_backend.dev.md.template  prover_backend.gpu.md.template
docs/: 01-installation-and-hello-world.md  02-host-program-api.md  03-guest-program-api.md  05-cli-reference.md
examples/fibonacci/host/src/: main.rs
examples/std-btreemap/host/src/: main.rs
examples/u256-add/host/src/: main.rs
