[package]
name = "airbender-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
toml = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["host"]
host = ["dep:serde", "dep:toml", "dep:thiserror"]
