[package]
name = "airbender-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
riscv_common = { workspace = true, features = ["boot_sequence", "custom_allocator", "custom_panic"] }
getrandom = { workspace = true, default-features = false, features = ["custom"] }
talc = { workspace = true, default-features = false, features = ["allocator", "nightly_api"], optional = true }

[features]
default = ["allocator-talc"]
std = []
allocator-bump = []
allocator-talc = ["dep:talc"]
allocator-custom = []
