[package]
name = "airbender-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "airbender"

[dependencies]
airbender-codec = { path = "../airbender-codec" }
airbender-guest = { path = "../airbender-guest", default-features = false }
airbender-macros = { path = "../airbender-macros" }
airbender-rt = { path = "../airbender-rt", default-features = false }

[features]
default = ["allocator-talc"]
std = ["airbender-guest/std", "airbender-rt/std"]
allocator-bump = ["airbender-guest/allocator-bump", "airbender-rt/allocator-bump"]
allocator-talc = ["airbender-guest/allocator-talc", "airbender-rt/allocator-talc"]
allocator-custom = [
    "airbender-guest/allocator-custom",
    "airbender-rt/allocator-custom",
]
