[package]
name = "cargo-airbender"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
]

[features]
default = ["gpu-prover"]
gpu-prover = ["airbender-host/gpu-prover"]

[dependencies]
airbender-build = { version = "0.1.0", path = "../airbender-build" }
airbender-host = { version = "0.1.0", path = "../airbender-host", default-features = false }
anyhow = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
bincode = { workspace = true, features = ["alloc", "serde"] }
clap = { workspace = true, features = ["derive"] }
dialoguer = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
